# Glint

./: .gitmodules  faustdemo.txt
assets/: GlintMainImage.h  GlintMainImage.sif  GlintMainImage.xcf
faust/: newGlintAlgorithm.txt  originalGlintAlgorithm.txt
host/: Glint.jucer  makeAndRun.sh
host/Builds/LinuxMakefile/: GlintPresets.spf  Makefile
host/JuceLibraryCode/: AppConfig.h  JuceHeader.h
host/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
include/: GlintConstants.hpp  GlintManager.hpp  GlintPresetUpgrader.hpp  GlintUiManager.hpp  IGlintLCDRefreshEventListener.hpp  IGlintParameterEventListener.hpp  IGlintPresetEventListener.hpp
src/: GlintManager.cpp  GlintPresetUpgrader.cpp  GlintUiManager.cpp  IGlintLCDRefreshEventListener.cpp  IGlintParameterEventListener.cpp  IGlintPresetEventListener.cpp
vst/: README.txt
vst/GlintVST/Builds/CMake/: CMakeLists.txt  mingw-toolchain.cmake
vst/GlintVST/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
